@@ -133,6 +133,9 @@
 	Fixed tiny memory leak on trying to list abbreviations when there are
 	none.
 
+	Fixed `:[un]select !<text/html>` treating "<text/html>" as an external
+	command.
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
